integration du visuel de tableau